# Waste-Sorter-AI

./: .gitignore  .replit  Procfile  README.md  app.py  package.json  pyproject.toml  requirements.txt  test_prediction.py  train_model.py  utils.py
model/: test_prediction.py
static/css/: style.css
static/js/: script.js
templates/: index.html
